--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-repository: BYR-Navi/BYR-Navi
-repository_url: https://github.com/BYR-Navi/BYR-Navi
+repository: MoTec-Navi/MoTec-Navi
+repository_url: https://github.com/MoTec95/MoTec95.github.io
 
 timezone: Asia/Shanghai
 lang: zh_CN
 
-title: 北邮人导航 · BYR-Navi
-alias_en: BYR-Navi
-alias_cn: 北邮人导航
-description: A Navigation Website for BYR
-keywords: 北邮人导航, BYR-Navi, BYR, BUPT, Navi, Navigation
-url: https://byr-navi.com
-established_at: "2016-10-01T00:00+08:00"
+title: MoTec · MoTec-Navi
+alias_en: MoTec-Navi
+alias_cn: MoTec
+description: A Navigation Website for MoTec
+keywords: MoTec-Navi, MoTec, BUPT, Navi, Navigation,导航,流量,公众号,技术,理财
+url: https://motec95.github.io
+established_at: "2019-3-18T00:00+08:00"
 
 author: iROCKBUNNY
 author_url: https://irockbunny.com
