--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ repository_url: https://github.com/MoTec95/MoTec95.github.io
 timezone: Asia/Shanghai
 lang: zh_CN
 
-title: MoTec · MoTec-Navi
+title: MoTec-Navi
 alias_en: MoTec-Navi
 alias_cn: MoTec
 description: A Navigation Website for MoTec
