change title and repository name

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-repository: MoTec-Navi/MoTec-Navi
+repository: MoTec95/MoTec95.github.io
 repository_url: https://github.com/MoTec95/MoTec95.github.io
 
 timezone: Asia/Shanghai
 lang: zh_CN
 
-title: MoTec-Navi
-alias_en: MoTec-Navi
+title: MoTec
+alias_en: MoTec
 alias_cn: MoTec
 description: A Navigation Website for MoTec
 keywords: MoTec-Navi, MoTec, BUPT, Navi, Navigation,导航,流量,公众号,技术,理财
