--- a/_data/message.yml
+++ b/_data/message.yml
@@ -5,4 +5,4 @@ detail: System Operator
 color: black
 icon: laugh squint
 image: false
-link: https://byr-navi.com/donate/
+link: https://motec95.github.io/donate/
