--- a/_data/analytics.yml
+++ b/_data/analytics.yml
@@ -4,6 +4,6 @@ google:
 matomo:
   url: https://vps.irockbunny.com/analytics/
   domains:
-  - "*.byr-navi.com"
+  - "*.motec95.github.io"
   site_id: 1
   token: a9961b3cb71063df373e0ff26c1b23fe
